// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Journey dashboard page When viewing the Catch Certificate Dashboad should take a snapshot of the whole page with drafts, pending, failed and completed documents 1`] = `
<div>
  <div>
    <div
      class="notification-message e1vcssft0 css-faqcc9-StyledInsetText-StyledHoc e4u1u2g0"
      style="border: 0px;"
    >
      <h2>
        This is the title
      </h2>
      <p>
        This is a message
      </p>
    </div>
    <div
      class="css-1lzr9ic-StyledRow e4u1u2g0"
    >
      <div
        class="css-n58wva-StyledColumn e4u1u2g0"
      >
        <div
          class="css-1l99ixu-OuterContainer e4u1u2g0"
        >
          <div
            class="css-n57fe4-InnerContainer e4u1u2g1"
          >
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <h1
                  class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
                >
                  Catch certificates
                </h1>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <form
                  method="POST"
                >
                  <input
                    name="nextUri"
                    type="hidden"
                    value=""
                  />
                  <button
                    class="button button-start"
                    type="submit"
                  >
                    Create a new catch certificate
                  </button>
                </form>
                <a
                  href="/manage-favourites"
                  id="manageYourProductFavourites"
                  style="line-height: 3;"
                >
                  Manage your product favourites
                </a>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <table
                  class="css-1uqv7s3-StyledTable e4u1u2g0"
                  name="catchCertificate-progress-certificates"
                >
                  <caption
                    class="css-gzlitc-Caption e172z3n50"
                  >
                    <h2
                      class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                    >
                      In progress
                    </h2>
                    <p
                      class="multiple-draft-info cc-guidance"
                    >
                      A maximum of 10 draft catch certificates is allowed at any time.
                      <br />
                      For pending submissions, refresh regularly to see updates.
                      <br />
                      For failed submissions, continue the document to view resolution instructions.
                    </p>
                  </caption>
                  <thead
                    class="css-1iuscil-TableHeader e1tbxulj0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                      >
                        Document number
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: left;"
                      >
                        Your reference
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Date started
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Status
                      </th>
                      <th
                        class="css-invq5l-CellHeader e1sike1z0"
                      >
                        Action
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="css-x1p7io-TableBody eo9ngsf0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        1
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        <strong
                          class="sc-bdVaJa lfXnwN failedTag"
                        >
                          Failed
                        </strong>
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/1/check-your-information"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            catch certificate 1 
                          </span>
                        </a>
                        <br />
                        <a
                          href="/add-company-details"
                          id="delete"
                        >
                          Delete
                          <span
                            class="govuk-visually-hidden"
                          >
                            catch certificate 1 
                          </span>
                        </a>
                      </td>
                    </tr>
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        2
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        <strong
                          class="sc-bdVaJa lfXnwN pendingTag"
                        >
                          Pending
                        </strong>
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      />
                    </tr>
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        3
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        <strong
                          class="sc-bdVaJa lfXnwN pendingTag"
                        >
                          Pending
                        </strong>
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      />
                    </tr>
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        4
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        <strong
                          class="sc-bdVaJa lfXnwN draftInactiveTag"
                        >
                          Draft
                        </strong>
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/4/progress"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            catch certificate 4 
                          </span>
                        </a>
                        <br />
                        <a
                          href="/add-company-details"
                          id="delete"
                        >
                          Delete
                          <span
                            class="govuk-visually-hidden"
                          >
                            catch certificate 4 
                          </span>
                        </a>
                      </td>
                    </tr>
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        5
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        <strong
                          class="sc-bdVaJa lfXnwN failedTag"
                        >
                          Failed
                        </strong>
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/5/check-your-information"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            catch certificate 5 
                          </span>
                        </a>
                        <br />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <table
                  class="css-1uqv7s3-StyledTable e4u1u2g0"
                  name="catchCertificate-completed-certificates"
                >
                  <caption
                    class="css-gzlitc-Caption e172z3n50"
                  >
                    <h2
                      class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                    >
                      Completed
                    </h2>
                  </caption>
                  <thead
                    class="css-1iuscil-TableHeader e1tbxulj0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                      >
                        Document number
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: left;"
                      >
                        Your reference
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Date created
                      </th>
                      <th
                        class="css-invq5l-CellHeader e1sike1z0"
                      >
                        Action
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="css-x1p7io-TableBody eo9ngsf0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 35%;"
                      >
                        6
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        01 Jan 2020
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <div>
                          <a
                            href="/pdf/export-certificates/"
                            rel="noopener noreferrer"
                          >
                            View
                            <span
                              class="govuk-visually-hidden"
                            >
                               catch certificate 6 
                            </span>
                          </a>
                        </div>
                        <div>
                          <a
                            href="/void-this-catch-certificate"
                          >
                            Void
                            <span
                              class="govuk-visually-hidden"
                            >
                               catch certificate 6 
                            </span>
                          </a>
                        </div>
                        <div>
                          <a
                            href="6/copy-this-catch-certificate"
                          >
                            Copy
                            <span
                              class="govuk-visually-hidden"
                            >
                               catch certificate 6 
                            </span>
                          </a>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              date-testid="catch certificate-history-of-certificates"
              style="display: flex; align-items: center; justify-content: space-around; padding-bottom: 20px;"
            >
              <div>
                &lt;&lt;
              </div>
              <div>
                Jan 2020
              </div>
              <div>
                <a
                  aria-label="Display catch certificate created in Dec 2019"
                  href="/?month=12&year=2019&position=1"
                >
                  Dec 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display catch certificate created in Nov 2019"
                  href="/?month=11&year=2019&position=2"
                >
                  Nov 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display catch certificate created in Oct 2019"
                  href="/?month=10&year=2019&position=3"
                >
                  Oct 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display the previous month’s catch certificate"
                  href="/?position=0&prev=true&month=10&year=2019"
                >
                  &gt;&gt;
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1yw15p6-StyledColumn e4u1u2g0"
      >
        <div
          class="css-fzye70"
        >
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="https://www.gov.uk/guidance/exporting-and-importing-fish-if-theres-no-brexit-deal"
            rel="noopener noreferrer"
            target="_blank"
          >
            Guidance on exporting fish
             (gov.uk) 
            <span
              class="govuk-visually-hidden"
            >
              (
              opens in new tab
              )
            </span>
          </a>
          <hr
            style="margin-top: 0px; margin-bottom: 18px;"
          />
          <h3
            class="e1vcssft0 css-1wlsbnr-StyledHeader-StyledHoc e4u1u2g0"
            style="margin-bottom: 0px;"
          >
            Direct landings
          </h3>
          <p>
            <a
              href="https://www.gov.uk/government/publications/give-prior-notification-to-land-fish-in-the-eu"
              rel="noopener noreferrer"
              target="_blank"
            >
              Prior notification form (gov.uk)
               
              <span
                class="govuk-visually-hidden"
              >
                (opens in new tab)
              </span>
            </a>
             (PDF)
            <br />
            <a
              href="https://www.gov.uk/government/publications/make-a-pre-landing-declaration-to-land-fish-in-an-eu-port"
              rel="noopener noreferrer"
              target="_blank"
            >
              Pre-landing declaration (gov.uk)
               
              <span
                class="govuk-visually-hidden"
              >
                (opens in new tab)
              </span>
            </a>
             (PDF)
          </p>
          <hr
            style="margin-top: 0px; margin-bottom: 0px;"
          />
          <p />
          <h3
            class="e1vcssft0 css-1wlsbnr-StyledHeader-StyledHoc e4u1u2g0"
            style="margin-bottom: 0px;"
          >
            Other fish export services
          </h3>
          <p>
            (for fish not caught by UK flagged vessels)
            <br />
            <a
              href="https://www.gov.uk/guidance/create-a-uk-processing-statement"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create a UK processing statement
               (gov.uk) 
              <span
                class="govuk-visually-hidden"
              >
                (opens in new tab)
              </span>
            </a>
            <br />
            <a
              href="https://www.gov.uk/guidance/create-a-uk-storage-document"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create a UK storage document
               (gov.uk) 
              <span
                class="govuk-visually-hidden"
              >
                (opens in new tab)
              </span>
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Journey dashboard page When viewing the Processing Statement Dashboard should take a snapshot of the whole page 1`] = `
<div>
  <div>
    <div
      class="notification-message e1vcssft0 css-faqcc9-StyledInsetText-StyledHoc e4u1u2g0"
      style="border: 0px;"
    >
      <h2>
        This is the title
      </h2>
      <p>
        This is a message
      </p>
    </div>
    <div
      class="css-1lzr9ic-StyledRow e4u1u2g0"
    >
      <div
        class="css-n58wva-StyledColumn e4u1u2g0"
      >
        <div
          class="css-1l99ixu-OuterContainer e4u1u2g0"
        >
          <div
            class="css-n57fe4-InnerContainer e4u1u2g1"
          >
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <h1
                  class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
                >
                  Processing statements
                </h1>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <form
                  action="/orchestration/api/v1/document/processingStatement"
                  method="POST"
                >
                  <input
                    name="nextUri"
                    type="hidden"
                    value="{documentNumber}/progress"
                  />
                  <button
                    class="button button-start"
                    type="submit"
                  >
                    Create a new processing statement
                  </button>
                </form>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <table
                  class="css-1uqv7s3-StyledTable e4u1u2g0"
                  name="processingStatement-progress-certificates"
                >
                  <caption
                    class="css-gzlitc-Caption e172z3n50"
                  >
                    <h2
                      class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                    >
                      In progress
                    </h2>
                    <p
                      class="multiple-draft-info cc-guidance"
                    >
                      A maximum of 10 draft processing statements is allowed at any time.
                      <br />
                      <br />
                    </p>
                  </caption>
                  <thead
                    class="css-1iuscil-TableHeader e1tbxulj0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                      >
                        Document number
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: left;"
                      >
                        Your reference
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Date started
                      </th>
                      <th
                        class="css-invq5l-CellHeader e1sike1z0"
                      >
                        Action
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="css-x1p7io-TableBody eo9ngsf0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        1
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/1/progress"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            processing statement 1 
                          </span>
                        </a>
                        <br />
                        <a
                          href="/1/delete-this-draft-processing-statement"
                          id="delete"
                        >
                          Delete
                          <span
                            class="govuk-visually-hidden"
                          >
                            processing statement 1 
                          </span>
                        </a>
                      </td>
                    </tr>
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        2
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/2/progress"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            processing statement 2 
                          </span>
                        </a>
                        <br />
                        <a
                          href="/2/delete-this-draft-processing-statement"
                          id="delete"
                        >
                          Delete
                          <span
                            class="govuk-visually-hidden"
                          >
                            processing statement 2 
                          </span>
                        </a>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <table
                  class="css-1uqv7s3-StyledTable e4u1u2g0"
                  name="processingStatement-completed-certificates"
                >
                  <caption
                    class="css-gzlitc-Caption e172z3n50"
                  >
                    <h2
                      class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                    >
                      Completed
                    </h2>
                  </caption>
                  <thead
                    class="css-1iuscil-TableHeader e1tbxulj0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                      >
                        Document number
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: left;"
                      >
                        Your reference
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Date created
                      </th>
                      <th
                        class="css-invq5l-CellHeader e1sike1z0"
                      >
                        Action
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="css-x1p7io-TableBody eo9ngsf0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 35%;"
                      >
                        3
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        28 Jan 2019
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <div>
                          <a
                            href="/pdf/export-certificates/"
                            rel="noopener noreferrer"
                          >
                            View
                            <span
                              class="govuk-visually-hidden"
                            >
                               processing statement 3 
                            </span>
                          </a>
                        </div>
                        <div>
                          <a
                            href="3/void-this-processing-statement"
                          >
                            Void
                            <span
                              class="govuk-visually-hidden"
                            >
                               processing statement 3 
                            </span>
                          </a>
                        </div>
                        <div>
                          <a
                            href="3/copy-this-processing-statement"
                          >
                            Copy
                            <span
                              class="govuk-visually-hidden"
                            >
                               processing statement 3 
                            </span>
                          </a>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              date-testid="processing statement-history-of-certificates"
              style="display: flex; align-items: center; justify-content: space-around; padding-bottom: 20px;"
            >
              <div>
                &lt;&lt;
              </div>
              <div>
                Jan 2020
              </div>
              <div>
                <a
                  aria-label="Display processing statement created in Dec 2019"
                  href="/?month=12&year=2019&position=1"
                >
                  Dec 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display processing statement created in Nov 2019"
                  href="/?month=11&year=2019&position=2"
                >
                  Nov 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display processing statement created in Oct 2019"
                  href="/?month=10&year=2019&position=3"
                >
                  Oct 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display the previous month’s processing statement"
                  href="/?position=0&prev=true&month=10&year=2019"
                >
                  &gt;&gt;
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1yw15p6-StyledColumn e4u1u2g0"
      >
        <div
          class="css-fzye70"
        >
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="https://www.gov.uk/guidance/exporting-and-importing-fish-if-theres-no-brexit-deal"
            rel="noopener noreferrer"
            target="_blank"
          >
            Guidance on exporting fish
             (gov.uk) 
            <span
              class="govuk-visually-hidden"
            >
              (
              opens in new tab
              )
            </span>
          </a>
          <hr
            style="margin-top: 0px; margin-bottom: 18px;"
          />
          <h3
            class="e1vcssft0 css-1wlsbnr-StyledHeader-StyledHoc e4u1u2g0"
            style="margin-bottom: 0px;"
          >
            Other fish export services
          </h3>
          <p>
            <a
              href="https://www.gov.uk/guidance/create-a-uk-catch-certificate"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create a UK catch certificate
               (gov.uk)
              <span
                class="govuk-visually-hidden"
              >
                (
                opens in new tab
                )
              </span>
            </a>
            <br />
            <a
              href="https://www.gov.uk/guidance/create-a-uk-storage-document"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create a UK storage document
               (gov.uk)
              <span
                class="govuk-visually-hidden"
              >
                (
                opens in new tab
                )
              </span>
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Journey dashboard page When viewing the Storage Document Dashboard should take a snapshot of the whole page 1`] = `
<div>
  <div>
    <div
      class="notification-message e1vcssft0 css-faqcc9-StyledInsetText-StyledHoc e4u1u2g0"
      style="border: 0px;"
    >
      <h2>
        This is the title
      </h2>
      <p>
        This is a message
      </p>
    </div>
    <div
      class="css-1lzr9ic-StyledRow e4u1u2g0"
    >
      <div
        class="css-n58wva-StyledColumn e4u1u2g0"
      >
        <div
          class="css-1l99ixu-OuterContainer e4u1u2g0"
        >
          <div
            class="css-n57fe4-InnerContainer e4u1u2g1"
          >
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <h1
                  class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
                >
                  Storage documents
                </h1>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <form
                  action="/orchestration/api/v1/document/storageDocument"
                  method="POST"
                >
                  <input
                    name="nextUri"
                    type="hidden"
                    value="{documentNumber}/add-your-reference"
                  />
                  <button
                    class="button button-start"
                    type="submit"
                  >
                    Create a new storage document
                  </button>
                </form>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <table
                  class="css-1uqv7s3-StyledTable e4u1u2g0"
                  name="storageNotes-progress-certificates"
                >
                  <caption
                    class="css-gzlitc-Caption e172z3n50"
                  >
                    <h2
                      class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                    >
                      In progress
                    </h2>
                    <p
                      class="multiple-draft-info cc-guidance"
                    >
                      A maximum of 10 draft storage documents is allowed at any time.
                      <br />
                      <br />
                    </p>
                  </caption>
                  <thead
                    class="css-1iuscil-TableHeader e1tbxulj0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                      >
                        Document number
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: left;"
                      >
                        Your reference
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Date started
                      </th>
                      <th
                        class="css-invq5l-CellHeader e1sike1z0"
                      >
                        Action
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="css-x1p7io-TableBody eo9ngsf0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        1
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/1/add-your-reference"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            storage document 1 
                          </span>
                        </a>
                        <br />
                        <a
                          href="/1/delete-this-draft-storage-document"
                          id="delete"
                        >
                          Delete
                          <span
                            class="govuk-visually-hidden"
                          >
                            storage document 1 
                          </span>
                        </a>
                      </td>
                    </tr>
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 28%;"
                      >
                        2
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        Unknown
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <a
                          href="/2/add-your-reference"
                          id="continue"
                        >
                          Continue
                          <span
                            class="govuk-visually-hidden"
                          >
                            storage document 2 
                          </span>
                        </a>
                        <br />
                        <a
                          href="/2/delete-this-draft-storage-document"
                          id="delete"
                        >
                          Delete
                          <span
                            class="govuk-visually-hidden"
                          >
                            storage document 2 
                          </span>
                        </a>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              class="css-1lzr9ic-StyledRow e4u1u2g0"
            >
              <div
                class="css-1w80l5h-StyledColumn e4u1u2g0"
              >
                <table
                  class="css-1uqv7s3-StyledTable e4u1u2g0"
                  name="storageNotes-completed-certificates"
                >
                  <caption
                    class="css-gzlitc-Caption e172z3n50"
                  >
                    <h2
                      class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
                    >
                      Completed
                    </h2>
                  </caption>
                  <thead
                    class="css-1iuscil-TableHeader e1tbxulj0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                      >
                        Document number
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: left;"
                      >
                        Your reference
                      </th>
                      <th
                        class="css-12e3svi-CellHeader e1sike1z0"
                        style="text-align: center;"
                      >
                        Date created
                      </th>
                      <th
                        class="css-invq5l-CellHeader e1sike1z0"
                      >
                        Action
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="css-x1p7io-TableBody eo9ngsf0"
                  >
                    <tr
                      class="css-7u9vzt-RowInner e1bh3ka20"
                    >
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="vertical-align: top; width: 35%;"
                      >
                        3
                      </td>
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: left; vertical-align: top; width: 25%;"
                      />
                      <td
                        class="css-14ci18q-CellInner edqrv1d0"
                        style="text-align: center; vertical-align: top; width: 25%;"
                      >
                        28 Jan 2019
                      </td>
                      <td
                        class="css-o6efgv-CellInner edqrv1d0"
                        style="vertical-align: top; word-break: normal; width: 15%;"
                      >
                        <div>
                          <a
                            href="/pdf/export-certificates/"
                            rel="noopener noreferrer"
                          >
                            View
                            <span
                              class="govuk-visually-hidden"
                            >
                               storage document 3 
                            </span>
                          </a>
                        </div>
                        <div>
                          <a
                            href="3/void-this-storage-document"
                          >
                            Void
                            <span
                              class="govuk-visually-hidden"
                            >
                               storage document 3 
                            </span>
                          </a>
                        </div>
                        <div>
                          <a
                            href="3/copy-this-storage-document"
                          >
                            Copy
                            <span
                              class="govuk-visually-hidden"
                            >
                               storage document 3 
                            </span>
                          </a>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
            <div
              date-testid="storage document-history-of-certificates"
              style="display: flex; align-items: center; justify-content: space-around; padding-bottom: 20px;"
            >
              <div>
                &lt;&lt;
              </div>
              <div>
                Jan 2020
              </div>
              <div>
                <a
                  aria-label="Display storage document created in Dec 2019"
                  href="/?month=12&year=2019&position=1"
                >
                  Dec 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display storage document created in Nov 2019"
                  href="/?month=11&year=2019&position=2"
                >
                  Nov 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display storage document created in Oct 2019"
                  href="/?month=10&year=2019&position=3"
                >
                  Oct 2019
                </a>
              </div>
              <div>
                <a
                  aria-label="Display the previous month’s storage document"
                  href="/?position=0&prev=true&month=10&year=2019"
                >
                  &gt;&gt;
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1yw15p6-StyledColumn e4u1u2g0"
      >
        <div
          class="css-fzye70"
        >
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="https://www.gov.uk/guidance/exporting-and-importing-fish-if-theres-no-brexit-deal"
            rel="noopener noreferrer"
            target="_blank"
          >
            Guidance on exporting fish
             (gov.uk) 
            <span
              class="govuk-visually-hidden"
            >
              (
              opens in new tab
              )
            </span>
          </a>
          <hr
            style="margin-top: 0px; margin-bottom: 18px;"
          />
          <h3
            class="e1vcssft0 css-1wlsbnr-StyledHeader-StyledHoc e4u1u2g0"
            style="margin-bottom: 0px;"
          >
            Other fish export services
          </h3>
          <p>
            <a
              href="https://www.gov.uk/guidance/create-a-uk-catch-certificate"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create a UK catch certificate
               (gov.uk) 
              <span
                class="govuk-visually-hidden"
              >
                (opens in new tab)
              </span>
            </a>
            <br />
            <a
              href="https://www.gov.uk/guidance/create-a-uk-processing-statement"
              rel="noopener noreferrer"
              target="_blank"
            >
              Create a UK processing statement
               (gov.uk) 
              <span
                class="govuk-visually-hidden"
              >
                (opens in new tab)
              </span>
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
